src/objects/General_Account__c.object
<CustomObject>
    <fields>
        <fullName>Account_Detail_Type__c</fullName>
        <label>Account Detail Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Tax_Rate__c</fullName>
        <label>Account Tax Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Accounting_Id__c</fullName>
        <label>Accounting Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Last Modified By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>General_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Modified_Date__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Payments_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Payments Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Restricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restricted</label>
        <type>Checkbox</type>
    </fields>
    <label>General Account</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Accounting_Id__c</columns>
        <columns>Account_Name__c</columns>
        <columns>Account_Type__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>GAN-{000000}</displayFormat>
        <label>General Accounts Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>General Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>